# task_manager

./: Cargo.toml  README.md
migrations/2024-01-23-130444_create_tasks/: up.sql
src/: args.rs  db.rs  helpers.rs  main.rs  models.rs  schema.rs
src/db/: connection.rs  migration.rs
